RESOLVED FIXED163890
[CSS Parser] Fix -webkit-box-reflect parsing
https://bugs.webkit.org/show_bug.cgi?id=163890
Summary [CSS Parser] Fix -webkit-box-reflect parsing
Dave Hyatt
Reported 2016-10-24 08:03:31 PDT
Fix -webkit-box-reflect parsing. The mask can be null, so .releaseNonNull() was not appropriate.
Attachments
Patch (12.04 KB, patch)
2016-10-24 08:05 PDT, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-10-24 08:05:28 PDT
Dave Hyatt
Comment 2 2016-10-24 08:10:35 PDT
Fixed in r207759.
Note You need to log in before you can comment on or make changes to this bug.